[package]
name = "composer-mirror-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
async-compression = { version = "0.4.17", features = ["tokio", "gzip"] }
bytes = "1.8.0"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
indicatif = "0.17.8"
reqwest = { version = "0.12.8", features = ["json", "socks", "stream"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
libc = "0.2.155"
